2020-02-03 Massimo Manghi <mxmanghi@apache.org>
    * src/request/: Update obsolete copyright statements
    * src/mod_rivet_ng/rivetCore.c: update comments to upload command
    * tests: changed upload file test

2020-04-02 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/formbroker.xml: fixed examples
    * src/mod_rivet_ng/rivet_lazy_mpm.c: resolved access to shared counter
    that was causing segfaults when child process was terminated

2020-01-19 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml: remove entry for command incr0 (dropped in 3.0)

2019-12-30 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: fixed bug in 'upload filename' that
    caused segfaults instead of Tcl errors when called without arguments
    * src/request/: Adding latest Copyright statements to files in this
    directory
    * tests/upload.rvt,upload.test: revised upload tests (need expansion
    to test multiple uploads)

2019-12-12 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/apache_config.c: copying also upload_files_to_var in
    Rivet_MergeConfig

2019-12-06 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: expanded error info data in Rivet_Upload
    * doc/rivet.css: new color scheme for docbook manual

2019-12-04 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: new branch uploadcmdfix with improved
    argument checking in Rivet_Upload that was the cause of random crashes

2019-11-29 Brice Hamon <bhdec@apache.org>
   * src/mod_rivet_ng/mod_rivet_cache.h: added RivetCache_DeleteEntry
   * src/mod_rivet_ng/mod_rivet_cache.c: 
   * src/mod_rivet_ng/rivetCore.c: fixed crash when rvt file not readable

2019-10-13 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/directives.xml: configuration directives table expanded
    * doc/examples/

2019-09-30 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: revised argument checking
