@@ -1,4 +1,3 @@
-# \$Id: \$
 # Minimal config file for testing
 
 # Parsed by makeconf.tcl
