@@ -2,7 +2,7 @@
 # the next line restarts using tclsh \
 	exec tclsh "$0" "$@"
 
-# Copyright 2001-2005 The Apache Software Foundation
+# Copyright 2001-2020 The Apache Tcl Team / The Apache Software Foundation
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -17,7 +17,8 @@
 # limitations under the License.
 
 set auto_path [linsert $auto_path 0 [file join [file dirname [info script]] apachetest]]
-
+set default_mpm prefork
+set httpd_args   {}
 puts stderr "runtests.tcl is running with auto_path: $auto_path"
 
 proc runtests_usage {} {
@@ -44,13 +45,53 @@ proc get_httpd_version {httpd {bd broken_down_version}} {
     return $m
 }
 
+# -- process_args
+#
+# basically this procedure strips from the argument list
+# the arguments not pertaining to the httpd server
+# Used to provide a way to control the test suite execution
+#
+
+proc process_args {arguments} {
+    global mpm
+    global bridge
+    global httpd_args
+
+    puts "n arguments: [llength $arguments]"
+    while {[llength $arguments]} {
+        set arguments [lassign $arguments a]
+        switch $a {
+            -mpm {
+                set arguments [lassign $arguments mpm]
+            }
+            -bridge {
+                set arguments [lassign $arguments bridge]
+            }
+            default {
+                lappend httpd_args $a
+            }
+        }
+    }
+}
+
 if { [llength $argv] < 1 } {
     runtests_usage
 } else {
-    set httpd_version [get_httpd_version [lindex $argv 0]]
+    set mpm $default_mpm
+    set bridge "default"
+
+    set httpd_bin     [lindex $argv 0]
+    set httpd_version [get_httpd_version $httpd_bin]
+    process_args      [lrange $argv 1 end]
+
+    puts "httpd_bin: $httpd_bin"
+    puts "httpd_args: $httpd_args"
+    puts "httpd_version: $httpd_version"
+    puts "mpm: $mpm, bridge: $bridge"
+
 }
 
-puts stderr "Tests will be run against apache ${httpd_version} version"
+puts stderr "Tests will be run against apache ${::httpd_version} version with the $mpm module and the $bridge bridge"
 
 package require apachetest
 
@@ -64,27 +105,28 @@ if { [encoding system] eq "utf-8" } {
 }
 
 if { [catch {
-    apachetest::getbinname $argv
+    apachetest::getbinname $httpd_bin
 } err ] } {
     puts stderr $err
     runtests_usage
 }
 
-apachetest::need_modules {
-    {mod_mime           mime_module}
-    {mod_negotiation    negotiation_module}
-    {mod_dir            dir_module}
-    {mod_log_config     log_config_module}
-    {mod_authz_core     authz_core_module}
-    {mod_authz_host     authz_host_module}
-    {mod_unixd          unixd_module}
-    {mod_mpm_prefork    mpm_prefork_module}
-}
+apachetest::need_modules [list \
+        {mod_mime                       mime_module} \
+        {mod_negotiation                negotiation_module} \
+        {mod_dir                        dir_module} \
+        {mod_log_config                 log_config_module} \
+        {mod_authz_core                 authz_core_module} \
+        {mod_authz_host                 authz_host_module} \
+        {mod_unixd                      unixd_module} \
+        [list mod_mpm_${mpm}            mpm_${mpm}_module]]
 
-apachetest::makeconf server.conf {
-    LoadModule rivet_module         [file join $CWD .. src/.libs mod_rivet[info sharedlibextension]]
-# User and Group directives removed to ease dependency of test suite from the output of command 'id' (from which
-# the values for these directives were inferred (Bug #53396)
+apachetest::makeconf server.conf $bridge {
+    LoadModule rivet_module [file join $CWD .. src/.libs mod_rivet[info sharedlibextension]]
+
+    # User and Group directives removed to ease dependency of test 
+    # suite from the output of command 'id' (from which
+    # the values for these directives were inferred (Bug #53396)
 
     <IfModule mod_mime.c>
         TypesConfig $CWD/mime.types
@@ -93,6 +135,7 @@ apachetest::makeconf server.conf {
         AddLanguage es .es
         AddType application/x-httpd-rivet .rvt
         AddType application/x-rivet-tcl   .tcl
+        BRIDGE
     </IfModule>
 
     <IfDefine SERVERCONFTEST>
@@ -122,14 +165,14 @@ set env(TCLLIBPATH) [file normalize [file join [file dirname [info script]] rive
 # If 'startserver' is specified on the command line, just start up the
 # server without running tests.
 
-puts "running test with arguments: $argv"
-switch -exact -- [lindex $argv 1] {
+puts "running test with arguments: $httpd_args"
+switch -exact -- [lindex $httpd_args 1] {
     startserver {
 	    apachetest::startserver
     }
     default {
-        set argv [lrange $argv 1 end]
-
+        #set argv [lrange $argv 1 end]
+        set argv $httpd_args
         source [file join . rivet.test]
     }
 }
